finished belaybelt write-up

--- a/projects/belaybelt.html
+++ b/projects/belaybelt.html
@@ -37,11 +37,14 @@
 <div class="box_content">
 		<h1>The Belay Belt</h1>
 		<div class="proj_img">
-			<img src="../assets/engs86-slides-39.png" style= "width:60%;">
+			<img class="img" src="../assets/engs86-slides-39.png">
 		</div>
 
 		<p>
-		In the sport of rock climbing, improper belay technique resulting from the belayer standing too far from the wall is a main source of accidents and injuries from lead climbing. This project aimed to <b>correct human errors in lead belaying.</b> The resulting product was the Belay Belt, a device that successfully measured the belayer’s distance from the wall and alerted the belayer when he or she exceeded a safe distance threshold. I worked on this device for my Engineering 86: Independent Project class over the course of 10 weeks in Winter 2019. 
+		In the sport of rock climbing, improper belay technique resulting from the belayer standing too far from the wall is a main source of accidents and injuries from lead climbing. This project aimed to <mark>correct human errors in lead belaying.</mark> The resulting product was the Belay Belt, a device that successfully measured the belayer's distance from the wall and alerted the belayer when he or she exceeded a safe distance threshold. I worked on this device for my Engineering 86: Independent Project class over the course of 10 weeks in Winter 2019. 
+		<br>
+		<br>
+		<br>
  
 		</p>
 		<h2>Final Prototype Video demonstration</h2>
@@ -53,47 +56,47 @@
 		</p>
 		
 		<h2>Introduction</h2>
-		<p>With the recently announced addition of sport climbing to the Olympics, the climbing world has skyrocketed in popularity the past few years. Lead climbing is a discipline of climbing that involves a "lead climber" and "lead belayer". The lead climber is climbing up with the rope, clipping into bolts along the way. The lead belayer is on the ground managing the rope by feeding or taking in "slack" (extra rope) to the climber and is responsible for ensuring the climber does not "deck" (hit the ground when falling). Lead climbing is the most popular form of rock climbing and the Dartmouth Mountaineering Club’s main focus in indoor and outdoor climbing. 
+		<p>With the recently announced addition of sport climbing to the Olympics, the climbing world has skyrocketed in popularity the past few years. Lead climbing is a discipline of climbing that involves a "lead climber" and "lead belayer". The lead climber is climbing up with the rope, clipping into bolts along the way. The lead belayer is on the ground managing the rope by feeding or taking in "slack" (extra rope) to the climber and is responsible for ensuring the climber does not "deck" (hit the ground when falling). Lead climbing is the most popular form of rock climbing and the Dartmouth Mountaineering Club's main focus in indoor and outdoor climbing. 
 		</p>
 
-		<br>
 		<br>
 
 		<h2>Research</h2>	
 		<div class="proj_img">
-			<img src="../assets/engs86-slides-06.png" style= "width:55%;">
+			<img class="img" src="../assets/engs86-slides-06.png">
 		</div>
 		<p>With the initial goal of innovating in the climbing field, I eventually decided to focus on injury prevention. Initial research involved a look into climbing injury case studies and a series of interiews of Dartmouth Mountaineering Club climbers to understand the when the injuries occured in the span of a climber's "experience curve". 
 		</p>
 		<div class="proj_img">
-				<img src="../assets/graph1.png" style= "width:55%;">
+				<img class="img" src="../assets/graph1.png">
 		</div>
-		<p>From this research and climber "journey map", I realized I needed to look more into lead climbing and lead belaying. Long story short, I found <b>a major cause of injuries resulted from a lead belayer standing too far away from the wall. </b> This leads to increased slack in the rope, which greatly increases the falling distance for the climber. The schematic in below illustrates the physics component to a climber’s fall.
+		<p>From this research and climber "journey map", I realized I needed to look more into lead climbing and lead belaying. Long story short, I found <b>a major cause of injuries resulted from a lead belayer standing too far away from the wall. </b> This leads to increased slack in the rope, which greatly increases the falling distance for the climber. The schematic in below illustrates the physics component to a climber's fall.
 		</p>
 
 		<div class="proj_img">
-			<img src="../assets/engs86-slides-31.png" style= "width:55%;">
+			<img class="img" src="../assets/engs86-slides-31.png">
 		</div>
 		<p>Not only is standing too far away from the wall dangerous for the climber, it is also risky for the belayer. The farther a belayer stands away from the wall, the more distance the climber will fall, thus increasing the force pulling the belayer into the wall. After refining a list of specifications, it was time to get started with designing.</p>
 		<br>
 		<br>
 
 		<h2>Design Process</h2>	
-		<h2>Prototype 1: Cardboard Prototype</h2>
-		<p>
-			The initial looks-like prototype was a cardboard prototype. The prototype included a foamcore rendition of a distance sensor for measuring distance away from wall, a buzzer that would activate when a belayer stepped out of range, and an LCD screen to display current distance status. The belayer would clip the device to the front of his or her harness.
-		</p>
-		<p>Experience Testing</p>
-		<p>
-			The cardboard prototype allowed for experience testing to see what having a clip-on device would feel like. The purpose of the experience testing was to gain initial feedback and findings to help guide further iterations and works-like prototypes. 
-		</p>
+		<h2><em>Prototype 1: Cardboard Prototype</em></h2>
 		<div class="proj_img">
 			<img src="../assets/ptype-foam.png" style= "width:55%;">
 		</div>
 		<p>
-			The experience test was conducted in Dartmouth’s Jonathan Belden Daniels ’86 Memorial Climbing Gym with four participants. Each participant performed one round of lead belaying without knowledge of the device. After this first round, the belayers were informed of the dangers of standing too far away from the wall and equipped with the cardboard prototype. They were instructed to belay the climber again, however this time whenever they stepped outside of the safe distance threshold of 6 feet, I would make a verbal "bzz" sound. 
+			The initial looks-like prototype was a cardboard prototype. The prototype included a foamcore rendition of a distance sensor for measuring distance away from wall, a buzzer that would activate when a belayer stepped out of range, and an LCD screen to display current distance status. The belayer would clip the device to the front of his or her harness.
 		</p>
-		<p>Findings</p>
+		<h2><em>Experience Testing</em></h2>
+		<p>
+			The cardboard prototype allowed for experience testing to see what having a clip-on device would feel like. The purpose of the experience testing was to gain initial feedback and findings to help guide further iterations and works-like prototypes. 
+		</p>
+		
+		<p>
+			The experience test was conducted in Dartmouth's Jonathan Belden Daniels '86 Memorial Climbing Gym with four participants. Each participant performed one round of lead belaying without knowledge of the device. After this first round, the belayers were informed of the dangers of standing too far away from the wall and equipped with the cardboard prototype. They were instructed to belay the climber again, however this time whenever they stepped outside of the safe distance threshold of 6 feet, I would make a verbal "bzz" sound. 
+		</p>
+		<h2><em>Findings</em></h2>
 		<p>
 			Each participant stood closer to the wall on the second trial which indicated potential for a successful product in this direction. Participants also noted that the device did not impede on their ability to belay or obstruct any movement. However, several problems were noted that provided areas for improvement.
 		</p>
@@ -102,7 +105,7 @@
 			<img src="../assets/wrongreading.png" style= "width:55%;">
 		</div>
 		<p>
-			The first and most important finding was accounting for an individual’s rotation movement while belaying. As seen above, belayers would often move and rotate around in 3D space, resulting in what would be incorrect readings from a clip-on device. The device’s one sensor would only measure distance in one direction, which would be directly in front of the belayer. This would result in an issue if the belayer were to rotate, and the sensor would record a much higher reading than the belayer’s actual distance from the wall. To account for this problem, three sensors spaces along a belt were used in the next iteration, with the smallest distance being used for the actual reading.  
+			The first and most important finding was accounting for an individual's rotation movement while belaying. As seen above, belayers would often move and rotate around in 3D space, resulting in what would be incorrect readings from a clip-on device. The device's one sensor would only measure distance in one direction, which would be directly in front of the belayer. This would result in an issue if the belayer were to rotate, and the sensor would record a much higher reading than the belayer's actual distance from the wall. To account for this problem, three sensors spaces along a belt were used in the next iteration, with the smallest distance being used for the actual reading.  
 		</p>
 		<p><mark>Finding 2: Different Safe Distance Threshold for Different Belayer-Climber Weight Ratios
 		</mark></p>
@@ -117,11 +120,11 @@
 			In the cardboard prototype, a "buzzing" sound was made to indicate the belayer should move closer to the wall. Feedback showed that individuals did not like the buzzing, noting that it sounded too much like a phone vibration or could be potentially uncomfortable if actually implemented. A new audio sound was implemented with a piezo buzzer and mode button, with different musical tones playing for different scenarios: switching to "standard mode", switching to "light mode", and "exceeding safe distance threshold". 
 		</p>
 		<div class="proj_img">
-			<img src="../assets/audio.gif" style= "width:55%;">
+			<img src="../assets/audio.gif" style= "width:80%;">
 		</div>
 
 
-		<h2>Prototype 2: Foamcore Prototype</h2>
+		<h2><em>Prototype 2: Foamcore Prototype</em></h2>
 		<div class="proj_img">
 			<img src="../assets/foamcore.png" style= "width:55%;">
 		</div>
@@ -132,7 +135,7 @@
 			Testing for this prototype involved ensuring that the correct distance sensor reading was being used as the measuring distance for the safe threshold. 
 		</p>
 
-		<h2>Prototype 3: Belay Belt</h2>
+		<h2><em>Prototype 3: Belay Belt</em></h2>
 		<div class="proj_img">
 			<img src="../assets/final-proto.png" style= "width:55%;">
 			<img src="../assets/final-prototype.jpg" style= "width:55%;">
@@ -147,12 +150,12 @@
 		<br>
 		<br>
 
-		<h2>Testing and Analysis</h2>	
+		<h2><em>Testing and Analysis</em></h2>	
 		<p>
 			Testing of the final prototype, the Belay Belt, was conducted at Evo Rock Gym in Concord, New Hampshire. A video of testing can be found above.
 		</p>
 		<div class="proj_img">
-				<img src="../assets/engs86-slidesspecs-37.png" style= "width:55%;">
+				<img class="img" src="../assets/engs86-slidesspecs-37.png">
 			</div>
 		<p>
 			The most important specification was reducing belayer distance from the wall. To test this specification, eight individuals ranging from Dartmouth climbers to climbing community members performed one round of lead belaying without the Belt and one round with the Belt (in "standard mode"). Their average distance away from the wall was calculated from measuring their distance every five seconds with distance markers. Each individual reduced his or her average distance from the wall with the Belt, with all of them being within the safety threshold when equipped with the Belt, but only half being within the safety threshold without the belt. 
@@ -161,12 +164,26 @@
 		<br>
 		<br>
 
-		<h2>Next Steps</h2>
-		<p>dfdf
+		<h2><em>Next Steps</em></h2>	
+		<div class="proj_img">
+			<img class="img" src="../assets/protomockup.png">
+		</div>
+		<p>The immediate next step would involve <mark>developing the prototype to production-level Belay Belt that would meet all expectations and be marketable.</mark> In other words, the current “works-like” prototype would be fully functional and “looks-like” as well.</p>
+		<p>
+			On the electronics side, this would involve reducing the size of components such as replacing the Arduino Nano with a chip or smaller microcontroller. In terms of construction, the Belt would need materials such as nylon or polyester webbing to withstand outdoors conditions. Closed-foam cell would increase comfort, and mesh would enhance breathability.
 
+		</p>
+		<p>
+			As suggested from feedback from participants, <mark>further exploration could be made regarding helping individuals change their behavior over time.</mark> One possibility could include taking advantage of Bluetooth or WiFi capabilities (potentially using Raspberry Pi rather than Arduino) and sending distance data to a console where individuals could track belay progress. Data could potentially be incorporated into the popular climbing app, Mountain Project by REI.
+		</p>
+		<p>
+			This product makes belaying safer by reducing the belayer's distance from the wall. Another factor that contributes to safe lead belaying is proper rope management. This device does not assess the actual amount of slack in the rope, however further studies could look into the feasibility of measuring the total amount of slack in rope relative to the climber's height.
 		</p>
 		<br>
 		<br>
+		<p>
+			Thanks for following along! To see a more in-depth discussion about this project, you can read the final write-up <a href="https://digitalcommons.dartmouth.edu/engs86/8/" class="link">here</a>. 
+			</p>
 
 	</div>
 </div>
