--- a/projects/dplanner.html
+++ b/projects/dplanner.html
@@ -22,7 +22,7 @@
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="../uiux.html" class="active">UI/UX</a>
+			<a href="../uiux.html" class="unselected">UI/UX & Dev</a>
 			<a href="../illustration.html" class="unselected">Illustration</a>
 			<a href="../branding.html" class="unselected">Branding</a>
 			<a href="../misc.html" class="unselected">Miscellaneous</a>
