--- a/uiux.html
+++ b/uiux.html
@@ -35,14 +35,27 @@
 
 <div style="padding-top: 150px;"></div>
 
-<div class="container_featuredProjects">
+<div class="container_projectTiles">
+	<div class="dispProj">
 	<a href="projects/thedish.html"><img class="tile" src="assets/projecttile-44.png"></a>
-	<a href="projects/sharity.html"><img class="tile" src="assets/projecttile-41.png"></a>
-	<a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png"></a>
-	<a href="projects/impdart.html"><img class="tile" src="assets/projecttile-60.png"></a>
-	<a href="projects/digdreams.html"><img class="tile" src="assets/projecttile-55.png"></a>
-	<a href="projects/meta.html"><img class="tile" src="assets/projecttile-45.png"></a>
-	<a href="projects/kaf.html"><img class="tile" src="assets/projecttile-42.png"></a>
+	<div class="tag">UI/UX</div>	
+	</div>
+	<div class="dispProj"><a href="projects/sharity.html"><img class="tile" src="assets/projecttile-41.png"></a>
+		<div class="tag">UI/UX</div>	</div>
+	<div class="dispProj"><a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png"></a>
+		<div class="tag">UI/UX</div>	</div>
+	<div class="dispProj"><a href="projects/impdart.html"><img class="tile" src="assets/projecttile-60.png"></a>
+		<div class="tag">UI/UX</div>	</div>
+	<div class="dispProj"><a href="projects/digdreams.html"><img class="tile" src="assets/projecttile-55.png"></a>
+		<div class="tag">UI/UX</div>	</div>
+	<div class="dispProj"><a href="projects/meta.html"><img class="tile" src="assets/projecttile-45.png"></a>
+		<div class="multitag">
+			<div class="singletag">UI/UX</div>
+			<div class="singletag">Dev</div>
+		</div>
+	</div>
+	<div class="dispProj"><a href="projects/kaf.html"><img class="tile" src="assets/projecttile-42.png"></a>
+		<div class="tag">UI/UX</div>	</div>
 </div>
 
 
