--- a/projects/quiz.html
+++ b/projects/quiz.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | UI/UX | Line@KAF</title>
+	<title>Regina | UI/UX | Buzzfeed Quiz</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
@@ -35,49 +35,35 @@
 <div class="top_padding"></div>
 <div class="content">
 <div class="box_content">
-		<h1>Line@KAF App</h1>
+		<h1>Buzzfeed Quiz</h1>
 		<div class="proj_img">
-			<img src="../assets/projecttile-42.png" style= "width:100%;">
-		</div>
+			<img src="../assets/quizmain.png" style= "width:100%;">
+        </div>
+        <p>
+                Take the "quiz" <a href=https://dartmouth-cs52-19s.github.io/lab2-regina-yan/ class="link">here!</a>
+                </p>
 		<p>
-		<h2>Status: Completed app, awaiting launch</h2>
+            <br>
+            <br>
+        For this assignment in my Full-Stack Web Dev class, we were tasked with creating a Javascript Buzzfeed-style quiz with the following specifications:
+        </p>
+        <div class="proj_img">
+                <img src="../assets/specsquiz.png" style= "width:100%;">
+            </div>
+        <p> I created a quiz that takes the user's inputs and calculates a hex color value. The quiz is framed as a "palette", and the user adds certain amounts of cyan, magenta, and yellow to create their final color mix. The background and option boxes also update their colors in response to the user's inputs. 
 		</p>
-		<p>
-		KAF, or King Arthur Flour, is a popular cafe in Dartmouth's Baker Berry library. It is overwhelmingly popular, especially between class periods with 20-minute wait times, that “long KAF line” has become a prevalent campus meme. 
-		</p>
-		<p>
-		During my Sophomore Summer, I worked on a team with two graduate students who proposed "Line @ KAF", an app that would use video technology to visualize the current line length and predicted upcoming line lengths. Before designing, I interviewed students on campus to figure out what features were highest in demand for the app. As expected, most complained about the line length and the <b>inability to figure out how long the line was without going there in person</b> (or texting friends who were already there). From these interviews, I also found that students were frustrated when they realized <b>the food they wanted was sold out after waiting for a long time</b> (the line blocks the view of the display window, so it's hard to see what's still available). Many also noted that <b>the menu was difficult to read</b>, as it was placed at the front of the line with very small text. 
-		</p>
-		<p>
-		I took these insights into account when figuring out the most important features that this app needed to have. I worked mostly on the illustration and UX side while the other designer on the team focused on the wireframes. 
-		</p>
+        <p>
+        <a href=https://github.com/regina-yan/lab2-regina-yan class="link">Source Code</a>
+            </p>
 
-		<h2>Takeaways</h2>
-		<p>
-		This was my first break into UI/UX design, and while I focused more on the UI side, I started understanding the process of wireframing and prototyping interfaces. This project is in the process of deployment, and the beta version will be out by Fall 2018, woohoo! 
-		</p>
-		<p>
-		<h2>User flow sketches</h2>	
-		</p>
-
-		<div class="proj_img">
-		<img src="../assets/linekafflow.jpeg" style= "width:100%;">
-		</div>
-
-		<h2>Line visualization and mockup ideas</h2>	
-
-		<div class="proj_img">
-		<img src="../assets/LineKAF.png" style= "width:100%;">
-		</div>
-
-
+		
 	</div>
 </div>
 <div class="proj_nav_background">
 	<div class="proj_nav_content">
 		<div class="proj_nav">
-		<h2>More UI/UX Projects</h2>
-		<a href="quiz.html"><img class="tile_small" src="../assets/quizcover-01.png"></a>
+        <h2>More UI/UX Projects</h2>
+        <a href="quiz.html"><img class="tile_small" src="../assets/quizcover-01.png"></a>
 		<a href="thedish.html"><img class="tile_small" src="../assets/projecttile-44.png"></a>
 		<a href="nudg.html"><img class="tile_small" src="../assets/projecttile-43.png"></a>
 		<a href="impdart.html"><img class="tile_small" src="../assets/projecttile-60.png"></a>
