--- a/uiux.html
+++ b/uiux.html
@@ -37,6 +37,10 @@
 
 <div class="container_projectTiles">
 	<div class="dispProj">
+		<a href="projects/quiz.html"><img class="tile" src="assets/quizcover-01.png"></a>
+		<div class="tag">JS</div>	
+	</div>
+	<div class="dispProj">
 	<a href="projects/thedish.html"><img class="tile" src="assets/projecttile-44.png"></a>
 	<div class="tag">UI/UX</div>	
 	</div>
@@ -45,13 +49,13 @@
 	<div class="dispProj"><a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png"></a>
 		<div class="tag">UI/UX</div>	</div>
 	<div class="dispProj"><a href="projects/impdart.html"><img class="tile" src="assets/projecttile-60.png"></a>
-		<div class="tag">UI/UX</div>	</div>
+		<div class="tag">Service Design</div>	</div>
 	<div class="dispProj"><a href="projects/digdreams.html"><img class="tile" src="assets/projecttile-55.png"></a>
-		<div class="tag">UI/UX</div>	</div>
+		<div class="tag">Service Design</div>	</div>
 	<div class="dispProj"><a href="projects/meta.html"><img class="tile" src="assets/projecttile-45.png"></a>
 		<div class="multitag">
 			<div class="singletag">UI/UX</div>
-			<div class="singletag">Dev</div>
+			<div class="singletag">HTML</div>
 		</div>
 	</div>
 	<div class="dispProj"><a href="projects/kaf.html"><img class="tile" src="assets/projecttile-42.png"></a>
