added react notes

--- a/uiux.html
+++ b/uiux.html
@@ -37,6 +37,10 @@
 
 <div class="container_projectTiles">
 	<div class="dispProj">
+		<a href="projects/notes.html"><img class="tile" src="assets/notescover-02.png"></a>
+		<div class="tag">React</div>	
+	</div>
+	<div class="dispProj">
 		<a href="projects/quiz.html"><img class="tile" src="assets/quizcover-01.png"></a>
 		<div class="tag">JS</div>	
 	</div>
