--- a/projects/notes.html
+++ b/projects/notes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | UI/UX | Sharity</title>
+	<title>Regina | UI/UX | React Notes</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
@@ -35,54 +35,34 @@
 <div class="top_padding"></div>
 <div class="content">
 <div class="box_content">
-	<h1>Sharity</h1>
-	<div class="proj_img">
-		<img src="../assets/sharitymockup.png" style= "width:100%;">
+		<h1>React Notes</h1>
+		<div class="proj_img">
+			<img src="../assets/notesmain.png" style= "width:100%;">
+        </div>
+        <p>
+            Try out the notes app <a href=http://regina-yan-cs52-lab3.surge.sh/ class="link">here!</a>
+            </p>
+		<p>
+            <br>
+            <br>
+        For this assignment in my Full-Stack Web Dev class, I created a realtime collaborative post-it note app with React and Firebase backend with the following features (and a few extras thrown in for fun)
+        </p>
+        <div class="proj_img">
+                <img src="../assets/specsnotes.png" style= "width:70%;">
+            </div>
+        <p>
+        <a href=https://github.com/regina-yan/lab3-regina-yan class="link">Source Code</a>
+            </p>
+
+		
 	</div>
-	<h2>Status: Developing</h2>
-	<p>
-	Nowadays we have so many opportunities to give to causes. However, there is little, if any, connection between the giver and the receiver, and this lack of communication results in 1) many donations that are not properly distributed to those who need it the most, and 2) the giver not knowing the extent to which their donation benefited an individual, something that decreases the "feel-good" emotion and the motivation to donate in the future. 
-	</p>
-	<p>
-	Sharity is here to <mark>reimagine the donation process by directly linking the giver to the receiver.</mark> It's a peer-to-peer platform that allows users to request items and tell their story as well as givers to list their items. Users can then use the opportunity to create a connection that extends beyond the donated object. 
-	</p>
-	<p>
-	<mark>I am working as the designer on this project and currently helping with front-end development in React.</mark> The project is led by a Stamps Scholar who is conducting research in this field. The site is still in basic wireframe mode (Figma link <a href="https://www.figma.com/proto/H3T05DBPtAsvwYczyuk62jDG/Sharity?node-id=2%3A0&scaling=scale-down" class="link">here</a>) and it will start seeing progress in the upcoming year!
-	</p>
-	<p>
-	<h2>User Flow</h2>	
-	</p>
-	<div class="proj_img">
-		<img src="../assets/sharityflow.jpeg" style= "width: 100%;">
-	</div>
-
-	<p>
-	<h2>Grayscales</h2>	
-	</p>
-	<div class="proj_img">
-		<img src="../assets/sharityfigma.png" style= "width: 100%;">
-		<p>Link to Figma prototype <a href="https://www.figma.com/proto/H3T05DBPtAsvwYczyuk62jDG/Sharity?node-id=2%3A0&scaling=scale-down" class="link">here</a></p>
-	</div>
-
-
-	<p>
-	<h2>Sketch Files</h2>	
-	</p>
-
-	<div class="proj_img">
-		<img src="../assets/sharitysketch.png" style= "width: 100%;">
-	</div>
-
-
-
-</div>
 </div>
 <div class="proj_nav_background">
 	<div class="proj_nav_content">
 		<div class="proj_nav">
-		<h2>More UI/UX Projects</h2>
-		<a href="notes.html"><img class="tile_small" src="../assets/notescover-02.png"></a>
-		<a href="quiz.html"><img class="tile_small" src="../assets/quizcover-01.png"></a>
+        <h2>More UI/UX Projects</h2>
+        <a href="notes.html"><img class="tile_small" src="../assets/notescover-02.png"></a>
+        <a href="quiz.html"><img class="tile_small" src="../assets/quizcover-01.png"></a>
 		<a href="thedish.html"><img class="tile_small" src="../assets/projecttile-44.png"></a>
 		<a href="nudg.html"><img class="tile_small" src="../assets/projecttile-43.png"></a>
 		<a href="impdart.html"><img class="tile_small" src="../assets/projecttile-60.png"></a>
