--- a/projects/nudg.html
+++ b/projects/nudg.html
@@ -110,6 +110,7 @@
 	<div class="proj_nav_content">
 		<div class="proj_nav">
 		<h2>More UI/UX Projects</h2>
+		<a href="notes.html"><img class="tile_small" src="../assets/notescover-02.png"></a>
 		<a href="quiz.html"><img class="tile_small" src="../assets/quizcover-01.png"></a>
 		<a href="thedish.html"><img class="tile_small" src="../assets/projecttile-44.png"></a>
 		<a href="nudg.html"><img class="tile_small" src="../assets/projecttile-43.png"></a>
