--- a/projects/notes.html
+++ b/projects/notes.html
@@ -37,7 +37,7 @@
 <div class="box_content">
 		<h1>React Notes</h1>
 		<div class="proj_img">
-			<img src="../assets/notesmain.png" style= "width:100%;">
+			<img src="../assets/notesmain2.png" style= "width:100%;">
         </div>
         <p>
             Try out the notes app <a href=http://regina-yan-cs52-lab3.surge.sh/ class="link">here!</a>
@@ -45,7 +45,7 @@
 		<p>
             <br>
             <br>
-        For this assignment in my Full-Stack Web Dev class, I created a realtime collaborative post-it note app with React and Firebase backend with the following features (and a few extras thrown in for fun)
+        For this assignment in my Full-Stack Web Dev class, I created a realtime collaborative post-it note app with React and Firebase with the following features (and a few extras thrown in for fun):
         </p>
         <div class="proj_img">
                 <img src="../assets/specsnotes.png" style= "width:70%;">
