added outing guide

--- a/illustration.html
+++ b/illustration.html
@@ -35,6 +35,7 @@
 <div style="padding-top: 150px;"></div>
 
 <div class="container_featuredProjects">
+	<a href="projects/outingguide.html"><img class="tile" src="assets/dog_tile.png"></a>
 	<a href="projects/adventurebook.html"><img class="tile" src="assets/adventure7.png"></a>
 	<a href="projects/technigala.html"><img class="tile" src="assets/projecttile-56.png"></a>
 	<a href="projects/dmcposter.html"><img class="tile" src="assets/projecttile-08.png"></a>
