--- a/projects/outingguide.html
+++ b/projects/outingguide.html
@@ -6,15 +6,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143754998-1"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-	
-		gtag('config', 'UA-143754998-1');
-		</script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143754998-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-143754998-1');
+	</script>
+
 </head>
 <body>
 <div class="head">
@@ -35,20 +36,33 @@
 <div class="top_padding"></div>	
 	<div class="content">
 	<div class="box_content">
-		<h1>Dartmouth Outing Guide Cover</h1>
+		<h1>Dartmouth Outing Guide</h1>
 		<div class="proj_img">
-			<img src="../assets/DOG.png" style= "height:557px; width:800px;">
-			<img src="../assets/DOG2.png" style= "height:557px; width:800px;">
+			<img src="../assets/dartmouthoutingguideFINAL-01.png" style= "width: 100%">
 		</div>
-			<p>
-			The Dartmouth Outing Guide contains information on outdoors activities around the Dartmouth area including white water kayaking rivers, sport climbing locations, and hiking routes. The Dartmouth Outing Club asked me to create designs for the Guide's new cover, and I came up with these two ideas.
-			This first design is minimalistic in feel with contrasting orange and green colors to give the cover some pop and lightheartedness. The background is a paper texture (a bit difficult to see in this photo) and the letters give it feel of paper cut-outs. 
-			The second design was inspired by Firewatch and features scenery from the Appalachian Trail. 	
-			</p>
-		
+		<p>
+            I created this front cover illustration for the updated Dartmouth Outing Guide. I had complete creative freedom for this project, which was awesome and scary at the same time. I wasn't sure where to start, but I knew I wanted to feature the New England forests and make some reference to Dartmouth. After brainstorming a few ideas, I ultimately decided to illustrate a camping scene with Baker Berry Library in the background. 
+		</p>
+		<div class="proj_img">
+			<img src="../assets/dog_closeup1.png" style= "width: 80%">
+			<img src="../assets/dog_closeup2.png" style= "width: 80%">
+		</div>
+
+		<h2>Initial Sketch</h2>
+		<div class="proj_img">
+		<img src="../assets/dog_sketch.jpg" style= "width: 80%">
+		<p>After a couple thumbnail sketches of various ideas, I chose to go with this scene.</p>
+		</div>
+
+		<h2>Illustration Process</h2>
+		<div class="proj_img">
+		<img src="../assets/dog_before.png" style= "width: 45%">
+		<img src="../assets/dog_after.png" style= "width: 45%">
+		</div>
+		<p>Similar to my Adventure Book process, I used Illustrator to create the shapes and Photoshop to add texture. </p>
 		 
 	</div>
-	</div>
+</div>
 	<div class="proj_nav_background">
 	<div class="proj_nav_content">
 		<div class="proj_nav">
@@ -78,6 +92,7 @@
 	<footer>
 	&copy; Regina Yan
 	</footer>
+
 
 </body>
 <script type="text/javascript">
