--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
 		<a href="mailto:reginayanster@gmail.com"><img src="assets/socmed-57.png" class="socialmedia"></a>
 		<a href="http://www.linkedin.com/in/reginayan" target="_blank"><img src="assets/socmed-58.png" class="socialmedia"></a>
 		<a href="https://github.com/regina-yan" target="_blank"><img src="assets/socmed-60.png" class="socialmedia"></a>
+		<a href="https://instagram.com/designbyregina" target="_blank"><img src="assets/socmed-insta.png" class="socialmedia"></a>
 	<br>
 	<br>
 	</div>
