updated courses styling

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 	<h2><b>empathetic, resilient, goofy</b></h2>
 	<p>Much of who I am is based on my love for understanding people, my grit and determination to learn anything I set my mind to, and my light-hearted, silly attitude towards life. </p>
 	<!-- <p>I also don't normally look like I do in that image - I like the photo though, and it's from <a href="projects/sa.html" class="link">one of my climbing trips.</a> But outside of having crazy hair days, I am an Associate UX Designer at Appian, and a rec!</p> -->
-	<p>I am currently an Associate UX Designer at Appian and recently graduated from Dartmouth College with a major in <b>Engineering</b> modified with <b>Studio Art</b> and a minor in <b>Human-Centered Design</b>. I'm primarily interested in <b>product and UI/UX design</b> and am inspired by solutions that positively impact our community and environment. I am so thankful for all the opportunities I have had and cannot wait for what's next.</p>
+	<p>I graduated from Dartmouth College in 2019 with a major in <b>Engineering</b> modified with <b>Studio Art</b> and a minor in <b>Human-Centered Design</b>. I'm primarily interested in <b>product and UI/UX design</b> and am inspired by solutions that positively impact our community and environment. Currently I'm in Arlington, VA working as an Associate UX Designer at Appian.</p>
 	<br>
 	<div class="proj_img">
 		<a href="mailto:reginayanster@gmail.com"><img src="assets/socmed-57.png" class="socialmedia"></a>
@@ -49,9 +49,12 @@
 	<br>
 	<br>
 	</div>
-	<div class="container_aboutCourses">
+	<div>
+		<br>
 		<h2>Relevant Courses</h2>
-		<ul>
+	<div class="container_aboutCourses">
+		<div>
+			<ul>
 			<li class="courses">ENGS 12: Design Thinking, <em>received Citation of Excellence</em></li>
 			<li class="courses">ENGS 21: Intro to Engineering, <em>received Phillip R. Jackson award for Best Overall Project</em></li>
 			<li class="courses">ENGS 22: Systems</li>
@@ -60,6 +63,10 @@
 			<li class="courses">ENGS 33: Solid Mechanics</li>
 			<li class="courses">ENGS 37: Environmental Engineering</li>
 			<li class="courses">ENGS 86: Independent Project (Product Design)</li>
+		</ul>
+		</div>
+		<div>
+			<ul>
 			<li class="courses">CS 01: Introduction to Programming and Computation (Python)</li>
 			<li class="courses">CS 10: Object-Oriented Programming (Java)</li>
 			<li class="courses">CS 22: 3D Digital Modeling, <em>received Citation of Excellence</em></li>
@@ -67,13 +74,21 @@
 			<li class="courses">CS 27: Projects in Digital Arts, <em>received Citation of Excellence</em></li>
 			<li class="courses">CS 28: Advanced Projects in Digital Arts, <em>Neukom Scholar for Computer Science</em></li>
 			<li class="courses">CS 52: Full-Stack Web Development, <em>received Citation of Excellence</em></li>
-			<li class="courses">SART 15: Drawing</li>
+		</ul>
+		</div>
+		<div>
+			<ul>
+				<li class="courses">SART 15: Drawing</li>
 			<li class="courses">SART 16: Sculpture</li>
 			<li class="courses">SART 17: Digital Drawing, <em>received Citation of Excellence</em></li>
 			<li class="courses">SART 25: Painting</li>
 			<li class="courses">PSYC 21: Perception</li>
 			<li class="courses">PSYC 23: Social Psychology</li>
-		</ul>
+			</ul>
+		</div>
+
+	</div>
+
 	</div>
 	<br>
 	<br>
