Reformatted CS pages
improved page layout

--- a/projects/notes.html
+++ b/projects/notes.html
@@ -37,22 +37,37 @@
 <div class="box_content">
 		<h1>React Notes</h1>
 		<div class="proj_img">
-			<img src="../assets/notesmain2.png" style= "width:100%;">
+			<a href="http://regina-yan-cs52-lab3.surge.sh/" target="_blank"><img src="../assets/notesmain2.png" style= "width:100%;"></a>
         </div>
-        <p>
-            Try out the notes app <a href=http://regina-yan-cs52-lab3.surge.sh/ class="link">here!</a>
-            </p>
-		<p>
             <br>
             <br>
-        For this assignment in my Full-Stack Web Dev class, I created a realtime collaborative post-it note app with React and Firebase with the following features (and a few extras thrown in for fun):
-        </p>
-        <div class="proj_img">
-                <img src="../assets/specsnotes.png" style= "width:70%;">
+            <div class="dev_box">
+            	<div>
+            		<p>
+            			For this assignment in my Full-Stack Web Dev class, I created a realtime collaborative post-it note app with React and Firebase with the following features:
+            		</p>
+            	</div>
+            	<div class="dev_bullets">
+            		<p>Add a note</p>
+            		<p>Delete a note</p>
+            		<p>Move a note in x,y</p>
+            		<p>Edit a note's title, content, and color</p>
+            		<p>Persist all changes to Firebase in realtime</p>
+            		<p>Updates based on Firebase events</p>
+            	</div>
+            	<br>
+            	<div class="dev_text">
+            		<p>
+            			<a href=http://regina-yan-cs52-lab3.surge.sh/ class="link" target="_blank">Notes App</a>
+            		</p>
+            		<p>
+       					 <a href=https://github.com/regina-yan/lab3-regina-yan class="link" target="_blank">Source Code</a>
+           			 </p>
+            	</div>
             </div>
-        <p>
-        <a href=https://github.com/regina-yan/lab3-regina-yan class="link">Source Code</a>
-            </p>
+        <!-- <div class="proj_img">
+                <img src="../assets/specsnotes.png" style= "width:70%;">
+            </div> -->
 
 		
 	</div>
