--- a/projects/quiz.html
+++ b/projects/quiz.html
@@ -37,26 +37,42 @@
 <div class="box_content">
 		<h1>Buzzfeed Quiz</h1>
 		<div class="proj_img">
-			<img src="../assets/quizmain.png" style= "width:100%;">
+			<a href=https://dartmouth-cs52-19s.github.io/lab2-regina-yan/ target="_blank"><img src="../assets/quizmain.png" style= "width:100%;"></a>
         </div>
-        <p>
-                Take the "quiz" <a href=https://dartmouth-cs52-19s.github.io/lab2-regina-yan/ class="link">here!</a>
-                </p>
-		<p>
             <br>
             <br>
-        For this assignment in my Full-Stack Web Dev class, we were tasked with creating a Javascript Buzzfeed-style quiz with the following specifications:
-        </p>
-        <div class="proj_img">
-                <img src="../assets/specsquiz.png" style= "width:100%;">
-            </div>
-        <p> I created a quiz that takes the user's inputs and calculates a hex color value. The quiz is framed as a "palette", and the user adds certain amounts of cyan, magenta, and yellow to create their final color mix. The background and option boxes also update their colors in response to the user's inputs. 
-		</p>
-        <p>
-        <a href=https://github.com/regina-yan/lab2-regina-yan class="link">Source Code</a>
-            </p>
 
-		
+			<div class="dev_box">
+            	<div>
+            		<p>
+            			 For this assignment in my Full-Stack Web Dev class, we were tasked with creating a Javascript Buzzfeed-style quiz with the following specifications:
+            		</p>
+            	</div>
+            	<div class="dev_bullets">
+            		<p><b>Questions: </b>Display several questions with some number of potential answers</p>
+            		<p><b>Answers: </b>Show question answers with 4 potential display states (initial none selected, hover, clicked/selected, not selected) and an associated value to be used to calculate overall quiz output</p>
+            		<p><b>Done Button: </b>Calculate the quiz output</p>
+            		<p><b>Output Display: </b>Display when all calculatoins are finished and shows some kind of error if not all questions were answered</p>
+            	</div>
+            	<br>
+            	<div>
+            		<p> 
+            			I created a quiz that takes the user's inputs and calculates a hex color value. The quiz is framed as a "palette", and the user adds certain amounts of cyan, magenta, and yellow to create their final color mix. The background and option boxes also update their colors in response to the user's inputs. 
+					</p>
+            	</div>
+            	<div class="dev_text">
+            		<p>
+            			<a href=https://dartmouth-cs52-19s.github.io/lab2-regina-yan/ class="link" target="_blank">Take the Quiz</a>
+            		</p>
+            		<p>
+       					 <a href=https://github.com/regina-yan/lab2-regina-yan class="link" target="_blank">Source Code</a>
+           			 </p>
+            	</div>
+            </div>
+
+        <!-- <div class="proj_img">
+                <img src="../assets/specsquiz.png" style= "width:100%;">
+            </div> -->
 	</div>
 </div>
 <div class="proj_nav_background">
