hiding belaybelt page for now

--- a/misc.html
+++ b/misc.html
@@ -36,7 +36,7 @@
 <div style="padding-top: 150px;"></div>
 
 <div class="container_featuredProjects">
-		<a href="projects/belaybelt.html"><img class="tile" src="assets/belaybeltcover.png"></a>
+		<!-- <a href="projects/belaybelt.html"><img class="tile" src="assets/belaybeltcover.png"></a> -->
 	<a href="projects/stressball.html"><img class="tile" src="assets/projecttile-13.png"></a>
 	<a href="projects/superfb.html"><img class="tile" src="assets/projecttile-35.png"></a>
 	<a href="projects/lily.html"><img class="tile" src="assets/projecttile-37.png"></a>
