--- a/projects/engs33.html
+++ b/projects/engs33.html
@@ -129,7 +129,7 @@
 	<div class="proj_nav_content">
 		<div class="proj_nav">
 		<h2>More Miscellaneous Projects</h2>
-		<a href="belaybelt.html"><img class="tile_small" src="../assets/belaybeltcover.png"></a>
+		<!-- <a href="belaybelt.html"><img class="tile_small" src="../assets/belaybeltcover.png"></a> -->
 		<a href="stressball.html"><img class="tile_small" src="../assets/projecttile-13.png"></a>
 		<a href="superfb.html"><img class="tile_small" src="../assets/projecttile-35.png"></a>
 		<a href="lily.html"><img class="tile_small" src="../assets/projecttile-37.png"></a>
