--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 	<div class="head">
-		<a href="index.html"><img class="logo" src="assets/regina-logo.svg" alt="Regina Yan"></a>	
+		<a href="index.html"><img class="logo" id="logo" src="assets/regina-logo.svg" alt="Regina Yan"></a>	
 		<header class="container">
 		<div class="topnav" id="myTopnav">
 			<a href="uiux.html" class="unselected">UX</a>
@@ -67,13 +67,16 @@
 </body>
 <script type="text/javascript">
 	function clickNav() {
-    var x = document.getElementById("myTopnav");
-    if (x.className === "topnav") {
-        x.className += " responsive";
-    } else {
-        x.className = "topnav";
-    }
-}
+		var x = document.getElementById("myTopnav");
+		var logo = document.getElementById("logo");
+		if (x.className === "topnav") {
+			x.className += " responsive";
+			logo.style.display = "none";
+		} else {
+			x.className = "topnav";
+			logo.style.display = "block";
+		}
+	}
 </script>
 
 
