tweaking mobile font size

--- a/projects/candydots.html
+++ b/projects/candydots.html
@@ -38,7 +38,7 @@
 	<div class="container_summary">
 		<div class="section_summary">
 			<div class="caption_container">
-				<img class="summary_image" src="../assets/candydots-cover.jpg"/>
+				<img class="summary_image" src="../assets/candydots-cover.JPG"/>
 			</div>
 		</div>
 		<div class="section_summary_text">
