trailhead updates, fixingg button display on mobile

--- a/projects/appian.html
+++ b/projects/appian.html
@@ -44,7 +44,7 @@
 			<div class="summary_title">Appian</div>
 			<br/>
 			<div class="summary_description"> 
-                    As a UX Designer at Appian, I worked on features for the platform's DevOps capabilities, advocated for UX best practices on Customer Success projects, and spearheaded a product illustration initiative
+                    As a UX Designer at Appian, I work on features for the platform's DevOps capabilities, advocate for UX best practices on Customer Success projects, and lead a product illustration team
                     <!-- As a UX Designer at Appian, I worked on features for the platform's DevOps capabilities, re-designed a new look and experience for onboarding users, and spearheaded a product illustration initiative -->
 			</div>
 			<a href="#container_content"><button class="button_circle_arrow" >
