--- a/uiux.html
+++ b/uiux.html
@@ -45,7 +45,7 @@
 			</br>
 				<div class="card_category_description">My journey in UX started when I joined Dartmouth's DALI Lab, an experiential learning lab where students design and develop digital solutions for folks in the Upper Valley. 
 				</br></br>
-				Since then, I've dived into the UX field and taken on a few side projects ranging from websites to game development, and sharpened my front-end development skills.
+				Since then, I've gained experience in the UX field through my work at Appian and my side projects ranging from websites to game development, and I've sharpened my front-end development skills along the way.
 				</br></br>
 				I've also become extremely passionate about diversity and inclusivity in the tech space, which I've been able to further explore in product illustrations.
 				</br></br>
@@ -55,7 +55,7 @@
 			<a href="projects/appian.html" class="card">
 				<img class="card_image" src="assets/appian-2.png"/>
 				<div class="card_title">Appian</div>
-				<div class="card_description">As a UX Designer at Appian, I worked on features for the platform's DevOps capabilities, advocated for UX best practices on Customer Success projects, and spearheaded a product illustration initiative</div>
+				<div class="card_description">As a UX Designer at Appian, I work on features for the platform's DevOps capabilities, advocate for UX best practices on Customer Success projects, and lead a product illustration team</div>
 				<div class="card_tag">UX</div>
 			</a>
 			<a href="projects/trailhead.html" class="card">
