--- a/projects/trailhead.html
+++ b/projects/trailhead.html
@@ -45,7 +45,7 @@
 			<div class="summary_title">Trailhead</div>
 			<br/>
 			<div class="summary_description"> 
-				The Dartmouth Outing Club is the nation's oldest and largest student-led outdoors club. Trips ranging from "beginner climbing trip to Rumney" to "overnight cabin camping" to "whitewater rafting down the Connecticut River" run multiple times a week. Before Trailhead, trips for each "sub-club" were advertised through email and in-person sub-club meetings. Sign-ups were managed through independent spreadsheets. Car rentals and gear logistics were handled through Outdoor Programs Office staff with paper systems in place. Students and staff needed one central location for trips exploration and organization, and Trailhead was the perfect solution.
+				The Dartmouth Outing Club is the nation's oldest and largest student-led outdoors club. Trips ranging from "beginner climbing trip to Rumney" to "overnight cabin camping" to "whitewater rafting down the Connecticut River" run multiple times a week. Before Trailhead, trips for each "sub-club" were advertised through sub-club email and in-person meetings. Sign-ups were managed through independent spreadsheets. Car rentals and gear logistics were handled through Outdoor Programs Office staff with paper systems in place. Students and staff needed one central location for trips exploration and organization, and Trailhead was the perfect solution.
 				</br> 
 				<a href="https://doc.dartmouth.edu" class="button_primary">Explore the Site  <i class="fas fa-arrow-right"></i></a>
 			</div>
@@ -56,12 +56,23 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
+			<div class="card_title">How might we make trips more accessible to the student body?</div>
+			<div class="content_text">
+					Most sub-clubs host weekly "feeds" where members get together, eat a home-cooked meal, discuss the week's excursions, and plan the following week's trips. Attendees (called "trippees") can sign up for trips during these meetings. <br><br> While feeds and trips are open to the student body, folks outside of the Outing Club circle often don't know about the trips or don't feel comfortable attending. Trailhead aims to bridge the gap between the Outing Club and the students by making trips more accessible and transparent. 
+			</div>
+			<div class="card_title">How might we consolidate the trips planning process?</div>
+			<div class="content_text">
+					The trip planning process involves two main stages: 1) Planning trip information and managing sign-ups, and 2) Acquiring vehicle rentals, equipment, and a credit card ("p-card"). The former is managed through paper sign-ups, spreadsheets, and emails. The latter involves the Outdoor Programs Office, a group of staff who use whiteboards and paper/pencil to approve and track trips. Trailhead should act as a centralized platform for all planning activities
+			</div>
 			<div class="card_title">Competitor Research</div>
+			<br>
 		<img class="summary_image" src="../assets/trailhead-1.png"/>
 		<div class="card_title">Low-Fidelity Mockups</div>
+		<br>
 		<img class="summary_image" src="../assets/trailhead-2.png"/>
 		<img class="summary_image" src="../assets/trailhead-3.png"/>
 		<div class="card_title">High-Fidelity Mockups</div>
+		<br>
 		<img class="summary_image" src="../assets/trailhead-4.png"/>
 		<img class="summary_image" src="../assets/trailhead-5.png"/>
     </div>
